--- a/src/main/resources/com/example/cashfair/history-screen.fxml
+++ b/src/main/resources/com/example/cashfair/history-screen.fxml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.HistoryScreen">
-   <children>
-      <AnchorPane layoutX="100.0" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <Label text="CashFair" BorderPane.alignment="CENTER">
+         <font>
+            <Font name="Cantarell Regular" size="25.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="50.0" right="50.0" top="20.0" />
+         </BorderPane.margin>
+      </ScrollPane>
+   </center>
+   <bottom>
+      <AnchorPane BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="50.0" right="50.0" />
+         </BorderPane.margin>
          <children>
-            <Label alignment="CENTER" layoutX="280.0" layoutY="17.0" text="CashFair" textAlignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0" AnchorPane.topAnchor="0.0">
-               <font>
-                  <Font name="Cantarell Regular" size="25.0" />
-               </font>
-            </Label>
+            <Button layoutX="148.0" layoutY="11.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Back" AnchorPane.leftAnchor="100.0" />
+            <Button layoutX="378.0" layoutY="11.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Details" AnchorPane.rightAnchor="81.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="118.0" layoutY="116.0" prefHeight="184.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
-         <children>
-            <ListView layoutX="91.0" layoutY="28.0" prefHeight="247.0" prefWidth="309.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="115.0" AnchorPane.topAnchor="20.0" />
-            <ScrollBar layoutX="485.0" layoutY="20.0" orientation="VERTICAL" AnchorPane.bottomAnchor="60.0" AnchorPane.topAnchor="20.0" />
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="290.0">
-               <children>
-                  <Button layoutX="168.0" layoutY="18.0" mnemonicParsing="false" text="Back" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="250.0" />
-                  <Button layoutX="300.0" layoutY="18.0" mnemonicParsing="false" text="Details" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="50.0" />
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-   </children>
-</AnchorPane>
+   </bottom>
+</BorderPane>
