--- a/src/main/resources/com/example/cashfair/concept-screen.fxml
+++ b/src/main/resources/com/example/cashfair/concept-screen.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <Label text="Concept/Date" BorderPane.alignment="CENTER">
@@ -20,13 +19,16 @@
    <center>
       <TableView BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn maxWidth="300.0" minWidth="300.0" prefWidth="300.0" text="Name" />
-          <TableColumn maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Amount" />
-            <TableColumn maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="\%" />
+          <TableColumn minWidth="-1.0" prefWidth="-1.0" text="Name" />
+          <TableColumn maxWidth="2500.0" minWidth="-1.0" prefWidth="-1.0" text="Amount" />
+            <TableColumn maxWidth="2500.0" minWidth="-1.0" prefWidth="-1.0" text="\%" />
         </columns>
          <BorderPane.margin>
             <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
          </BorderPane.margin>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </center>
    <bottom>
