--- a/src/main/resources/com/example/cashfair/money-payment.fxml
+++ b/src/main/resources/com/example/cashfair/money-payment.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -10,26 +11,33 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.MoneyPaymentController">
-   <bottom>
-      <AnchorPane prefHeight="358.0" prefWidth="444.0" BorderPane.alignment="CENTER">
+   <top>
+      <Label alignment="CENTER" prefHeight="36.0" prefWidth="168.0" text="Payments" textAlignment="CENTER" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="395.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="moneyPaymentTable" layoutX="50.0" layoutY="115.0" prefHeight="190.0" prefWidth="333.0">
+            <TableView fx:id="moneyPaymentTable" layoutX="62.0" layoutY="5.0" prefHeight="190.0" prefWidth="333.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
               <columns>
                 <TableColumn fx:id="personCell" editable="false" prefWidth="112.0" text="Person" />
                 <TableColumn fx:id="amountCell" editable="false" prefWidth="250.0" text="Amount" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
-            <Button layoutX="184.0" layoutY="323.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Apply" />
-            <ComboBox fx:id="moneyPaymentScrp" layoutX="111.0" layoutY="69.0" prefHeight="25.0" prefWidth="105.0" promptText="Currency" />
-            <Spinner fx:id="moneyPaymentSpnr" layoutX="255.0" layoutY="69.0" prefHeight="25.0" prefWidth="76.0" />
-            <Label layoutX="153.0" layoutY="14.0" prefHeight="36.0" prefWidth="168.0" text="Payments" textAlignment="CENTER">
-               <font>
-                  <Font size="25.0" />
-               </font>
-            </Label>
+            <ComboBox fx:id="moneyPaymentScrp" layoutX="227.0" layoutY="13.0" prefHeight="25.0" prefWidth="105.0" promptText="Currency" AnchorPane.rightAnchor="150.0" />
+            <Spinner fx:id="moneyPaymentSpnr" layoutX="62.0" layoutY="13.0" prefHeight="25.0" prefWidth="76.0" AnchorPane.leftAnchor="30.0" />
+            <Button layoutX="256.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Apply" AnchorPane.rightAnchor="30.0" />
          </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </BorderPane.margin>
       </AnchorPane>
-   </bottom>
+   </center>
 </BorderPane>
