--- a/src/main/resources/com/example/cashfair/addPerson.fxml
+++ b/src/main/resources/com/example/cashfair/addPerson.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.AddPersonController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.AddPersonController">
    <center>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -27,7 +21,7 @@
             <TableView fx:id="tblPerson" layoutX="116.0" layoutY="136.0" prefHeight="176.0" prefWidth="360.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="110.0">
               <columns>
                 <TableColumn fx:id="colName" maxWidth="254.0" minWidth="-1.0" prefWidth="244.0" text="Name" />
-                <TableColumn fx:id="colPor" maxWidth="299.0" minWidth="-1.0" prefWidth="170.0" text="Porcentage" />
+                <TableColumn fx:id="colPor" maxWidth="299.0" minWidth="-1.0" prefWidth="0.0" text="Porcentage" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -47,10 +41,11 @@
       </Label>
    </top>
    <bottom>
-      <Button fx:id="btnNex" mnemonicParsing="false" text="Next" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </Button>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btnNex" layoutX="310.0" layoutY="14.0" mnemonicParsing="false" text="Next" />
+            <Button fx:id="btnBac" layoutX="242.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+         </children>
+      </AnchorPane>
    </bottom>
 </BorderPane>
