--- a/src/main/resources/com/example/cashfair/money-payment.fxml
+++ b/src/main/resources/com/example/cashfair/money-payment.fxml
@@ -33,7 +33,7 @@
             </TableView>
             <ComboBox fx:id="moneyPaymentScrp" layoutX="227.0" layoutY="13.0" prefHeight="25.0" prefWidth="105.0" promptText="Currency" AnchorPane.rightAnchor="150.0" />
             <Spinner fx:id="moneyPaymentSpnr" layoutX="62.0" layoutY="13.0" prefHeight="25.0" prefWidth="76.0" AnchorPane.leftAnchor="30.0" />
-            <Button layoutX="256.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Apply" AnchorPane.rightAnchor="30.0" />
+            <Button fx:id="btnApply" layoutX="256.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Apply" AnchorPane.rightAnchor="30.0" />
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
