--- a/src/main/resources/com/example/cashfair/home-screen.fxml
+++ b/src/main/resources/com/example/cashfair/home-screen.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.HomeScreenController">
@@ -19,19 +22,37 @@
       </Label>
    </top>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <BorderPane.margin>
+            <Insets left="500.0" right="500.0" top="20.0" />
+         </BorderPane.margin>
          <children>
-            <Button fx:id="btnPay" layoutX="205.0" layoutY="108.0" mnemonicParsing="false" text="Make a payment">
+            <Button fx:id="btnHis" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="200.0" mnemonicParsing="false" text="View the history" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="70.0" top="70.0" />
+               </GridPane.margin>
                <font>
-                  <Font size="20.0" />
+                  <Font name="Cantarell Regular" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="btnHis" layoutX="208.0" layoutY="174.0" mnemonicParsing="false" text="View the history">
+            <Button fx:id="btnPay" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="35.0" minWidth="200.0" mnemonicParsing="false" text="Make a payment" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="70.0" top="70.0" />
+               </GridPane.margin>
                <font>
-                  <Font size="20.0" />
+                  <Font name="Cantarell Regular" size="18.0" />
                </font>
             </Button>
          </children>
-      </AnchorPane>
+      </GridPane>
    </center>
 </BorderPane>
