--- a/src/main/resources/com/example/cashfair/money-payment.fxml
+++ b/src/main/resources/com/example/cashfair/money-payment.fxml
@@ -9,13 +9,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.MoneyPaymentController">
    <top>
-      <Label alignment="CENTER" prefHeight="36.0" prefWidth="168.0" text="Payments" textAlignment="CENTER" BorderPane.alignment="CENTER">
+      <Label alignment="CENTER" text="CashFair -Payments" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
-            <Font size="25.0" />
+            <Font name="Cantarell Regular" size="25.0" />
          </font>
       </Label>
    </top>
@@ -24,20 +27,50 @@
          <children>
             <TableView fx:id="moneyPaymentTable" layoutX="62.0" layoutY="5.0" prefHeight="190.0" prefWidth="333.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
               <columns>
-                <TableColumn fx:id="personCell" editable="false" prefWidth="112.0" text="Person" />
-                <TableColumn fx:id="amountCell" editable="false" prefWidth="250.0" text="Amount" />
+                <TableColumn fx:id="personCell" editable="false" prefWidth="112.0" style="-fx-alignment: CENTER;" text="Contributor" />
+                <TableColumn fx:id="amountCell" editable="false" prefWidth="250.0" style="-fx-alignment: CENTER;" text="Amount" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <ComboBox fx:id="moneyPaymentScrp" layoutX="227.0" layoutY="13.0" prefHeight="25.0" prefWidth="105.0" promptText="Currency" AnchorPane.rightAnchor="150.0" />
-            <Spinner fx:id="moneyPaymentSpnr" layoutX="62.0" layoutY="13.0" prefHeight="25.0" prefWidth="76.0" AnchorPane.leftAnchor="30.0" />
-            <Button fx:id="btnApply" layoutX="256.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Apply" AnchorPane.rightAnchor="30.0" />
+            <GridPane alignment="CENTER" minWidth="400.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="165.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Spinner fx:id="moneyPaymentSpnr" maxWidth="300.0" />
+                  <Button fx:id="btnApply" maxWidth="110.0" mnemonicParsing="false" text="Apply" GridPane.columnIndex="2" />
+                  <ComboBox fx:id="moneyPaymentScrp" maxWidth="110.0" promptText="Currency" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
          </children>
          <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" left="50.0" right="50.0" top="20.0" />
          </BorderPane.margin>
       </AnchorPane>
    </center>
+   <bottom>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="btnBack" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Back" />
+            <Button fx:id="btnNext" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Next" GridPane.columnIndex="1" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="30.0" right="30.0" />
+         </BorderPane.margin>
+      </GridPane>
+   </bottom>
 </BorderPane>
