simplified and refactored code and fixed some bugs

--- a/src/main/resources/com/example/cashfair/addContributor.fxml
+++ b/src/main/resources/com/example/cashfair/addContributor.fxml
@@ -28,7 +28,7 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <GridPane layoutX="116.0" AnchorPane.bottomAnchor="430.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="20.0">
+            <GridPane layoutX="116.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="20.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="130.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="60.0" minWidth="10.0" prefWidth="10.0" />
