--- a/src/main/resources/views/addContributor.fxml
+++ b/src/main/resources/views/addContributor.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.AddContributorController">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.AddContributorController">
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
