--- a/src/main/resources/views/home-screen.fxml
+++ b/src/main/resources/views/home-screen.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"  xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.HomeScreenController">
+<BorderPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.HomeScreenController">
    <top>
-      <Label text="CashFair" underline="true" BorderPane.alignment="CENTER">
+      <Label text="CashFair" BorderPane.alignment="CENTER">
          <font>
-            <Font size="36.0" />
+            <Font name="Cantarell Regular" size="36.0" />
          </font>
          <effect>
             <Blend />
