--- a/src/main/resources/views/money-payment.fxml
+++ b/src/main/resources/views/money-payment.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cashfair.views.MoneyPaymentController">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.MoneyPaymentController">
    <top>
       <Label alignment="CENTER" text="CashFair -Payments" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <font>
