--- a/src/main/resources/views/home-screen.fxml
+++ b/src/main/resources/views/home-screen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.HomeScreenController">
+<BorderPane id="bcg_hmScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.controllers.HomeScreenController">
    <top>
       <Label text="CashFair" BorderPane.alignment="CENTER">
          <font>
@@ -55,4 +55,11 @@
          </children>
       </GridPane>
    </center>
+   <bottom>
+      <Button fx:id="btnStyle" mnemonicParsing="false" BorderPane.alignment="BOTTOM_RIGHT">
+         <BorderPane.margin>
+            <Insets bottom="50.0" right="50.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
 </BorderPane>
