--- a/src/main/resources/views/history-screen.fxml
+++ b/src/main/resources/views/history-screen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -15,6 +16,9 @@
          <font>
             <Font name="Cantarell Regular" size="25.0" />
          </font>
+         <effect>
+            <Blend />
+         </effect>
       </Label>
    </top>
    <center>
